--- a/src/AdministrationBundle/Resources/views/header/header.html.twig
+++ b/src/AdministrationBundle/Resources/views/header/header.html.twig
@@ -12,7 +12,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    {% include ('UserBundle:header:user.html.twig') %}
+                    {# Users #}
+                    <li>
+                        <a href="{{ path('administration_users') }}" ng-click="" ng-cloak>{{ ng.translate('HEADER.USERS') }}</a>
+                    </li>
+
+                    {# Companies #}
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown">
                             <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ ng.translate('COMPANY.LABEL') }} <b class="caret"></b></div>
@@ -23,6 +28,18 @@
                             <li><a href="{{ path('administration_regions') }}" ng-cloak> {{ ng.translate('COMPANY.REGIONS') }} </a></li>
                         </ul>
                     </li>
+
+                    {# Configuration #}
+                    <li class="dropdown">
+                        <a href="#" data-toggle="dropdown">
+                            <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ ng.translate('CONFIGURATION.LABEL') }} <b class="caret"></b></div>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ path('configuration_stores') }}" ng-cloak> {{ ng.translate('CONFIGURATION.STORES') }} </a></li>
+                            <li><a href="{{ path('configuration_installation') }}" ng-cloak> {{ ng.translate('CONFIGURATION.INSTALLATION') }} </a></li>
+                        </ul>
+                    </li>
+
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
