Created Front-end and splash screen, added highcharts gauges and added copy of complete company data to new store.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,13 +46,18 @@
             <script src="{{ asset('bundles/app/js/angular-toggle/angular-toggle.min.js') }}"></script>
             <script src="{{ asset('bundles/app/js/angular-tree/angular-ui-tree.js') }}"></script>
 
+            <script src="{{ asset('bundles/app/js/angular-charts/highcharts.js') }}"></script>
+            <script src="{{ asset('bundles/app/js/angular-charts/highcharts-more.js') }}"></script>
+            <script src="{{ asset('bundles/app/js/angular-charts/highcharts-ng.min.js') }}"></script>
+
             <script src="{{ asset('bundles/app/js/moment/moment-with-locales.min.js') }}"></script>
             <script src="{{ asset('bundles/app/js/iban/iban.js') }}"></script>
             <script src="{{ asset('bundles/app/js/smart-table/smart-table.js') }}"></script>
 
-            <script src="/js/fos_js_routes.js"></script>
+            <script src="{{ asset('js/fos_js_routes.js') }}"></script>
 
             <script src="http://code.angularjs.org/1.0.8/i18n/angular-locale_en.js"></script>
+
 
             <script src="{{ asset('bundles/app/js/app/controllers/appCtrl.js') }}"></script>
             <script src="{{ asset('bundles/app/js/app/controllers/userCtrl.js') }}"></script>
