--- a/src/AdministrationBundle/Resources/views/configuration/stores.html.twig
+++ b/src/AdministrationBundle/Resources/views/configuration/stores.html.twig
@@ -82,5 +82,6 @@
     <script src="{{ asset('bundles/app/js/app/datasets/controllers.js') }}"></script>
     <script src="{{ asset('bundles/app/js/app/datasets/sensors.js') }}"></script>
     <script src="{{ asset('bundles/app/js/app/datasets/devicegroups.js') }}"></script>
+    <script src="{{ asset('bundles/app/js/app/datasets/charts.js') }}"></script>
 {% endblock %}
 
