--- a/src/AdministrationBundle/Resources/views/installation/edit_sensor.html.twig
+++ b/src/AdministrationBundle/Resources/views/installation/edit_sensor.html.twig
@@ -35,4 +35,5 @@
 {% block javascripts %}
     <script src="{{ asset('bundles/app/js/app/controllers/installationCtrl.js') }}"></script>
     <script src="{{ asset('bundles/app/js/app/datasets/sensors.js') }}"></script>
+    <script src="{{ asset('bundles/app/js/app/datasets/charts.js') }}"></script>
 {% endblock %}
