--- a/src/AppBundle/Resources/views/dashboard/dashboard.html.twig
+++ b/src/AppBundle/Resources/views/dashboard/dashboard.html.twig
@@ -1,108 +1,77 @@
 {% extends 'base.html.twig' %}
 
-{% block header %}
+{% block contents %}
     {% if app.user %}
-        {%  include 'AppBundle::header.html.twig' %}
-    {% endif %}
-{%  endblock %}
 
-{% block page %}
-    {% if app.user %}
-        <div class="page">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="panel panel-info">
-                            <div class="panel-heading">
-                                <div class="row">
-                                    <div class="col-xs-3">
-                                        <i class="fa fa-user fa-5x"></i>
-                                    </div>
-                                    <div class="col-xs-9 text-right">
-                                        <div ng-cloak>{{ ng.translate('USER.WELCOME') }}</div>
-                                        <div ng-cloak>{{ '{{ AUTH.user().Name }}' }}</div>
+        {% block header %}
+            {%  include 'AppBundle::header.html.twig' %}
+        {%  endblock %}
+
+        {% block page %}
+            <div class="page">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 col-lg-4">
+                            <div class="panel panel-primary cursor-pointer" ng-click="showRoute('tcm_stores')">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3 text-center big-button-icon">
+                                            <i class="fa fa-map-marker fa-5x fa-fw"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right big-button-text" ng-cloak>
+                                            {{ ng.translate('LOCATIONS') }}
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <a href="{{ path('logout') }}">
-                                <div class="panel-footer">
-                                    <span class="pull-left" ng-cloak>{{ ng.translate('AUTH.LOGOUT') }}</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                    <div class="clearfix"></div>
+                        </div>
+                        <div class="col-xs-12 col-md-4 col-lg-4">
+                            <div class="panel panel-green cursor-pointer" ng-click="showProfile()">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3 text-center big-button-icon">
+                                            <i class="fa fa-user-circle fa-5x fa-fw"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right big-button-text" ng-cloak>
+                                            {{ ng.translate('USER.PROFILE') }}
+                                        </div>
+                                    </div>
                                 </div>
-                            </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-4 col-lg-4">
+                            <div class="panel panel-red cursor-pointer" ng-click="logout()">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3 text-center big-button-icon">
+                                            <i class="fa fa-sign-out fa-5x fa-fw"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right big-button-text" ng-cloak>
+                                            {{ ng.translate('AUTH.LOGOUT') }}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                <div class="row">
-                                    <div class="col-xs-3">
-                                        <i class="fa fa-location-arrow fa-5x"></i>
-                                    </div>
-                                    <div class="col-xs-9 text-right">
-                                        <div class="huge"></div>
-                                        <div ng-cloak>{{ ng.translate('LOCATIONS') }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <a href="">
-                                <div class="panel-footer">
-                                    <span class="pull-left" ng-cloak>{{ ng.translate('SHOW_DETAILS') }}</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="panel panel-yellow">
-                            <div class="panel-heading">
-                                <div class="row">
-                                    <div class="col-xs-3">
-                                        <i class="fa fa-exclamation-triangle fa-5x"></i>
-                                    </div>
-                                    <div class="col-xs-9 text-right">
-                                        <div class="huge"></div>
-                                        <div ng-cloak>{{ ng.translate('NOTIFICATIONS') }}</div>
+                    <div class="row" ng-show="AUTH.isSuperAdmin()">
+                        <div class="col-xs-12 col-md-4 col-lg-4">
+                            <div class="panel panel-yellow cursor-pointer" ng-click="showAdministration()">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3 text-center big-button-icon">
+                                            <i class="fa fa-briefcase fa-5x fa-fw"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right big-button-text" ng-cloak>
+                                            {{ ng.translate('ADMINISTRATION.LABEL') }}
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <a href="">
-                                <div class="panel-footer">
-                                    <span class="pull-left" ng-cloak>{{ ng.translate('SHOW_DETAILS') }}</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="panel panel-green">
-                            <div class="panel-heading">
-                                <div class="row">
-                                    <div class="col-xs-3">
-                                        <i class="fa fa-users fa-5x"></i>
-                                    </div>
-                                    <div class="col-xs-9 text-right">
-                                        <div class="huge"></div>
-                                        <div ng-cloak>{{ ng.translate('USERS') }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <a href="">
-                                <div class="panel-footer">
-                                    <span class="pull-left" ng-cloak>{{ ng.translate('SHOW_DETAILS') }}</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endblock %}
     {% endif %}
 {% endblock %}
