--- a/src/AppBundle/Resources/views/header.html.twig
+++ b/src/AppBundle/Resources/views/header.html.twig
@@ -8,22 +8,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="" ng-click="">TCM</a>
+                <a class="navbar-brand" href="{{ path('tcm_dashboard') }}" ng-cloak>{{ ng.translate('TCM.LABEL') }}</a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="" ng-click="" ng-cloak>{{ ng.translate('HEADER.USERS') }}</a></li>
-                    <li><a href="" ng-click="" ng-cloak>{{ ng.translate('HEADER.LOCATIONS') }}</a></li>
-                    <li><a href="" ng-click="" ng-cloak>{{ ng.translate('HEADER.NOTIFICATIONS') }}</a></li>
-                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown">
                             <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ '{{ AUTH.user().Name }}' }} <b class="caret"></b></div>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="" ng-click="showProfile()" ng-cloak> {{ ng.translate('USER.PROFILE') }} </a></li>
-                            <li><a href="{{ path('logout') }}" ng-cloak> {{ ng.translate('AUTH.LOGOUT') }} </a></li>
+                            <li><a href="" ng-click="showProfile()" ng-cloak><i class="fa fa-user fa-fw"></i> {{ ng.translate('USER.PROFILE') }} </a></li>
+                            <li class="divider"></li>
+                            <li><a href="" ng-click="logout()" ng-cloak><i class="fa fa-sign-out fa-fw"></i> {{ ng.translate('AUTH.LOGOUT') }} </a></li>
                         </ul>
                     </li>
                 </ul>
