--- a/src/AppBundle/Resources/views/store/group_sensors.html.twig
+++ b/src/AppBundle/Resources/views/store/group_sensors.html.twig
@@ -42,7 +42,7 @@
                 <div class="panel-heading text-center">
                     <div class="row">
                         <div class="col-xs-2">
-                            <i class="fa fa-fw fa-thermometer-2 fa-2x"></i>
+                            <i class="fa fa-fw fa-2x" ng-class="{ 'fa-thermometer-2': sensor.TypeId == 2, 'fa-thermometer-2': sensor.TypeId == 3, 'fa-sign-in': sensor.TypeId == 4 }"></i>
                         </div>
                         <div class="col-xs-10">
                             <label class="sensor-name">{{ sensor.Name }}</label>
