TCM logo to original.

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -60,6 +60,7 @@ body {
 .tcmLogo-splash {
     -webkit-animation-duration: 3s;
     -webkit-animation-delay: 0s;
+    width: 250px;
 }
 
 .tcmText-splash {
