logout path bug fix

--- a/src/AdministrationBundle/Resources/views/header/header.html.twig
+++ b/src/AdministrationBundle/Resources/views/header/header.html.twig
@@ -48,7 +48,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="" ng-click="showProfile()" ng-cloak> {{ ng.translate('USER.PROFILE') }} </a></li>
-                            <li><a href="{{ path('logout') }}" ng-cloak> {{ ng.translate('AUTH.LOGOUT') }} </a></li>
+                            <li><a href="{{ path('tcm_logout') }}" ng-cloak> {{ ng.translate('AUTH.LOGOUT') }} </a></li>
                         </ul>
                     </li>
                 </ul>
