--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -96,6 +96,27 @@ body {
 .sensor-name {
     padding-top: 4px;
     font-size: 1.5em;
+    text-shadow: 0px 1px #fefefe;
+}
+
+.sensor-status {
+    padding-top: 4px;
+    font-size: 1.25em;
+    text-shadow: 0px 1px #fefefe;
+}
+
+.sensor-updated {
+    padding-top: 2px;
+    font-size: 1.25em;
+    color: #9e9b9e;
+    text-shadow: 0px 1px #fefefe;
+}
+
+.gauge-filter {
+    z-index: 10000;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
 }
 
 .cg-busy {
