--- a/src/AppBundle/Resources/views/store/sensors.html.twig
+++ b/src/AppBundle/Resources/views/store/sensors.html.twig
@@ -27,7 +27,7 @@
                             <i class="fa fa-fw fa-2x" ng-class="{ 'fa-cubes': sensor.TypeId == 1, 'fa-thermometer-2': sensor.TypeId == 2, 'fa-thermometer-2': sensor.TypeId == 3, 'fa-sign-in': sensor.TypeId == 4 }"></i>
                         </div>
                         <div class="col-xs-10">
-                            <label class="sensor-name">{{ sensor.Name }}</label>
+                            <label ng-class="{ 'group-name': sensor.TypeId == 1, 'sensor-name': sensor.TypeId == 2 || sensor.TypeId == 3 || sensor.TypeId == 4 }">{{ sensor.Name }}</label>
                         </div>
                     </div>
                 </div>
@@ -36,13 +36,13 @@
                         <div ng-switch-when="1">
                         </div>
                         <div ng-switch-when="2">
-                            <highchart id="sensor.Name" config="sensor.chartConfig"></highchart>
+                            <highchart id="sensor.Name" config="sensor.chartConfig" ng-class="{ 'gauge-filter': sensor.State == 1 }"></highchart>
                         </div>
                         <div ng-switch-when="3">
-                            <highchart id="sensor.Name" config="sensor.chartConfig"></highchart>
+                            <highchart id="sensor.Name" config="sensor.chartConfig" ng-class="{ 'gauge-filter': sensor.State == 1 }"></highchart>
                         </div>
                         <div ng-switch-when="4">
-                            <highchart id="sensor.Name" config="sensor.chartConfig"></highchart>
+                            <highchart id="sensor.Name" config="sensor.chartConfig" ng-class="{ 'gauge-filter': sensor.State == 1 }"></highchart>
                         </div>
                     </div>
                 </div>
@@ -50,9 +50,32 @@
                     <div class="panel-footer" ng-switch-when="1">
                         <div class="row">
                             <div class="col-xs-12 col-md-12 col-lg-12">
-                                <button class="btn btn-sm btn-default pull-right" ng-click="showGroupSensors(sensor.Id)">
+                                <button class="btn btn-sm btn-default pull-right" ng-click="showGroupSensors(sensor.Id)" ng-cloak>
                                     <i class="fa fa-fw fa-caret-right"></i> {{ 'INFO' | translate }}
                                 </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer" ng-switch-default="">
+                        <div class="row">
+                            <div class="col-xs-2">
+                                <i class="fa fa-fw fa-2x" ng-class="{ 'fa-check-circle text-success': sensor.State == 0, 'fa-question-circle text-info': sensor.State == 1, 'fa-exclamation-circle text-danger': sensor.State == 2 }"></i>
+                            </div>
+                            <div class="col-xs-3">
+                                <div ng-switch="sensor.State" class="sensor-status">
+                                    <div ng-switch-when="0" class="text-success" ng-cloak>
+                                        {{ 'SENSOR.STATE.ACTIVE' | translate }}
+                                    </div>
+                                    <div ng-switch-when="1" class="text-info" ng-cloak>
+                                        {{ 'SENSOR.STATE.INACTIVE' | translate }}
+                                    </div>
+                                    <div ng-switch-when="2" class="text-danger" ng-cloak>
+                                        {{ 'SENSOR.STATE.NOTIFIED' | translate }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-7">
+                                <div class="pull-right sensor-updated"><small><i class="fa fa-fw fa-clock-o"></i> {{ sensor.DataCollectedAt.date | GMT: 'HH:mm:ss DD-MM-YYYY' }}</small></div>
                             </div>
                         </div>
                     </div>
