Implemented information screen, added new company type (service company), added extra functionality for correct update of sensor information and overview in sensor groups if sensor has notify state. Included command for checking sensor inactivity or sensor limit excession as well as notify after a specific amount of time (per sensor)

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,6 +45,7 @@
             <script src="{{ asset('bundles/app/js/angular-select/select.min.js') }}"></script>
             <script src="{{ asset('bundles/app/js/angular-toggle/angular-toggle.min.js') }}"></script>
             <script src="{{ asset('bundles/app/js/angular-tree/angular-ui-tree.js') }}"></script>
+            <script src="{{ asset('bundles/app/js/angular-map/ng-map.min.js') }}"></script>
 
             <script src="{{ asset('bundles/app/js/angular-charts/highcharts.js') }}"></script>
             <script src="{{ asset('bundles/app/js/angular-charts/highcharts-more.js') }}"></script>
@@ -57,7 +58,6 @@
             <script src="{{ asset('js/fos_js_routes.js') }}"></script>
 
             <script src="http://code.angularjs.org/1.0.8/i18n/angular-locale_en.js"></script>
-
 
             <script src="{{ asset('bundles/app/js/app/controllers/appCtrl.js') }}"></script>
             <script src="{{ asset('bundles/app/js/app/controllers/userCtrl.js') }}"></script>
