--- a/src/AppBundle/Resources/views/stores/stores.html.twig
+++ b/src/AppBundle/Resources/views/stores/stores.html.twig
@@ -86,11 +86,9 @@
                                 <div class="panel panel-info cursor-pointer" ng-click="pageBack()">
                                     <div class="panel-heading">
                                         <div class="row">
-                                            <div class="col-xs-10 text-left big-button-text" ng-cloak>
+                                            <div class="col-xs-12 text-left big-button-text" ng-cloak>
                                                 {{ ng.translate('BACK') }}
-                                            </div>
-                                            <div class="col-xs-2 text-center big-button-icon">
-                                                <i class="fa fa-chevron-left fa-5x fa-fw"></i>
+                                                <i class="fa fa-chevron-left fa-2x fa-fw pull-right"></i>
                                             </div>
                                         </div>
                                     </div>
