--- a/src/AdministrationBundle/Resources/views/companies/company_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/companies/company_form.html.twig
@@ -193,7 +193,7 @@
 
         {# Addresses block #}
         <h5 ng-cloak>
-            <i class="fa fa-envelope fa-fw"></i> {{ ng.translate('COMPANY.ADDRESSES') }}
+            <i class="fa fa-map-marker fa-fw"></i> {{ ng.translate('COMPANY.ADDRESSES') }}
         </h5>
         <hr/>
         {% verbatim %}
@@ -291,13 +291,13 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label col-md-2 col-xs-12"
-                               ng-cloak>{{ 'COMPANY.MAP_URL' | translate }}</label>
+                               ng-cloak>{{ 'COMPANY.MAP_COORDINATES' | translate }}</label>
                         <div class="col-md-10 col-xs-12">
                             <div class="row">
                                 <div class="col-md-12 col-xs-12">
                                     <input class="form-control input-sm"
-                                           name="addresses[{{ address.Id }}][MapUrl]"
-                                           ng-model="address.MapUrl" no-enter/>
+                                           name="addresses[{{ address.Id }}][MapCoordinates]"
+                                           ng-model="address.MapCoordinates" no-enter/>
                                 </div>
                             </div>
                         </div>
