--- a/src/AdministrationBundle/Resources/views/users/user_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/users/user_form.html.twig
@@ -263,13 +263,13 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label col-md-2 col-xs-12"
-                               ng-cloak>{{ 'USER.MAP_URL' | translate }}</label>
+                               ng-cloak>{{ 'USER.MAP_COORDINATES' | translate }}</label>
                         <div class="col-md-10 col-xs-12">
                             <div class="row">
                                 <div class="col-md-12 col-xs-12">
                                     <input class="form-control input-sm"
-                                           name="addresses[{{ address.Id }}][MapUrl]"
-                                           ng-model="address.MapUrl" no-enter/>
+                                           name="addresses[{{ address.Id }}][MapCoordinates]"
+                                           ng-model="address.MapCoordinates" no-enter/>
                                 </div>
                             </div>
                         </div>
