--- a/src/AppBundle/Resources/views/store/group_sensors.html.twig
+++ b/src/AppBundle/Resources/views/store/group_sensors.html.twig
@@ -27,7 +27,7 @@
                         </div>
                         <div class="col-xs-10 text-left group-name" ng-cloak>
                             {% verbatim %}
-                                {{ sensors.sensor().Name }}
+                                {{ sensors.sensorGroup(sensorGroup).Name }}
                             {% endverbatim %}
                         </div>
                     </div>
@@ -37,12 +37,12 @@
     </div>
     {% verbatim %}
     <div class="row">
-        <div class="col-md-4 col-lg-4" ng-repeat="sensor in sensors.sensor().devices" ng-if="sensor.IsEnabled">
+        <div class="col-md-4 col-lg-4" ng-repeat="sensor in sensors.sensorGroup(sensorGroup).devices" ng-if="sensor.IsEnabled">
             <div class="panel panel-default" ng-click="">
                 <div class="panel-heading text-left">
                     <div class="row">
                         <div class="col-xs-2">
-                            <i class="fa fa-fw fa-2x" ng-class="{ 'fa-thermometer-2': sensor.TypeId == 2, 'fa-thermometer-2': sensor.TypeId == 3, 'fa-sign-in': sensor.TypeId == 4 }"></i>
+                            <i class="fa fa-fw fa-2x" ng-class="{ 'fa-thermometer-2': sensor.TypeId == 2 || sensor.TypeId == 3, 'fa-sign-in': sensor.TypeId == 4 }"></i>
                         </div>
                         <div class="col-xs-10">
                             <label class="sensor-name">{{ sensor.Name }}</label>
@@ -94,11 +94,9 @@
             <div class="panel panel-info cursor-pointer" ng-click="showSensors()">
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="col-xs-10 text-left big-button-text" style="font-size: 30px;" ng-cloak>
+                        <div class="col-xs-12 text-left big-button-text" style="font-size: 30px;" ng-cloak>
                             {{ ng.translate('BACK') }}
-                        </div>
-                        <div class="col-xs-2 text-center big-button-icon">
-                            <i class="fa fa-chevron-left fa-5x fa-fw"></i>
+                            <i class="fa fa-chevron-left fa-2x fa-fw pull-right"></i>
                         </div>
                     </div>
                 </div>
