--- a/src/AppBundle/Resources/views/store/sensors.html.twig
+++ b/src/AppBundle/Resources/views/store/sensors.html.twig
@@ -17,23 +17,68 @@
             </div>
         </div>
     </div>
-    {% verbatim %}
+
     <div class="row">
-        <div class="col-md-4 col-lg-4" ng-repeat="sensor in sensors.sensors()" ng-if="sensor.IsEnabled">
-            <div class="panel" ng-class="{ 'panel-primary': sensor.TypeId == 1, 'panel-info': sensor.TypeId != 1 }" ng-click="">
+        <div class="col-md-6 col-lg-6" ng-repeat="sensor in sensors.sensors()" ng-if="sensor.IsEnabled" bs-collapse>
+            <div class="panel" ng-class="{ 'panel-primary': sensor.TypeId == 1, 'panel-info': sensor.TypeId != 1 }">
                 <div class="panel-heading text-left">
+                    {% verbatim %}
                     <div class="row">
                         <div class="col-xs-2">
-                            <i class="fa fa-fw fa-2x" ng-class="{ 'fa-cubes': sensor.TypeId == 1, 'fa-thermometer-2': sensor.TypeId == 2, 'fa-thermometer-2': sensor.TypeId == 3, 'fa-sign-in': sensor.TypeId == 4 }"></i>
+                            <i class="fa fa-fw fa-2x" ng-class="{ 'fa-cubes': sensor.TypeId == 1, 'fa-thermometer-2': sensor.TypeId == 2 || sensor.TypeId == 3, 'fa-sign-in': sensor.TypeId == 4 }"></i>
                         </div>
-                        <div class="col-xs-10">
+                        <div class="col-xs-8">
                             <label ng-class="{ 'group-name': sensor.TypeId == 1, 'sensor-name': sensor.TypeId == 2 || sensor.TypeId == 3 || sensor.TypeId == 4 }">{{ sensor.Name }}</label>
                         </div>
+                        <div class="col-xs-2">
+                            <button class="btn btn-xs btn-primary pull-right" ng-if="sensor.TypeId == 1" bs-collapse-toggle><i class="fa fa-fw fa-caret-down"></i></button>
+                        </div>
                     </div>
+                    {% endverbatim %}
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" bs-collapse-target>
                     <div ng-switch="sensor.TypeId">
                         <div ng-switch-when="1">
+                            <div class="container-fluid">
+                                <div ng-switch="sensor.State">
+                                    <div ng-switch-when="0">
+                                        {%  set image = 'bundles/app/images/beertap.gif' ~ '?a=' ~ random(10000) %}
+                                        <img class='group-image'
+                                            src="{{ asset(image) }}"/>
+                                    </div>
+                                    {% verbatim %}
+                                    <div ng-switch-when="2">
+                                        <div ng-repeat="isensor in sensors.sensorGroup(sensor.Id).devices">
+                                            <div class="well well-sm" ng-if="isensor.IsEnabled">
+                                                <div class="row">
+                                                    <div class="col-xs-5 col-md-5 group-sensor">
+                                                        {{ isensor.Name }}
+                                                    </div>
+                                                    <div class="col-xs-4 col-md-4 text-right group-sensor">
+                                                        <div ng-switch="isensor.TypeId">
+                                                            <div ng-switch-when="2">
+                                                                {{ isensor.InternalTemperature | number: 2 }} °C
+                                                            </div>
+                                                            <div ng-switch-when="3">
+                                                                {{ isensor.Temperature | number: 2 }} °C
+                                                            </div>
+                                                            <div ng-switch-when="4">
+                                                                <div class="label label-success">
+                                                                    {{ 'YES' | translate }}
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-xs-3 col-md-3 text-right">
+                                                        <i class="fa fa-fw fa-2x" ng-class="{ 'fa-check-circle text-success': isensor.State == 0, 'fa-question-circle text-info': isensor.State == 1, 'fa-exclamation-circle text-danger': isensor.State == 2 }"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endverbatim %}
+                                </div>
+                            </div>
                         </div>
                         <div ng-switch-when="2">
                             <highchart id="sensor.Name" config="sensor.chartConfig" ng-class="{ 'gauge-filter': sensor.State == 1 }"></highchart>
@@ -46,12 +91,13 @@
                         </div>
                     </div>
                 </div>
+                {% verbatim %}
                 <div ng-switch="sensor.TypeId">
                     <div class="panel-footer" ng-switch-when="1">
                         <div class="row">
                             <div class="col-xs-12 col-md-12 col-lg-12">
                                 <button class="btn btn-sm btn-default pull-right" ng-click="showGroupSensors(sensor.Id)" ng-cloak>
-                                    <i class="fa fa-fw fa-caret-right"></i> {{ 'INFO' | translate }}
+                                    <i class="fa fa-fw fa-caret-right"></i> {{ 'DETAILS' | translate }}
                                 </button>
                             </div>
                         </div>
@@ -80,20 +126,18 @@
                         </div>
                     </div>
                 </div>
+                {% endverbatim %}
             </div>
         </div>
     </div>
-    {% endverbatim %}
     <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12">
             <div class="panel panel-info cursor-pointer" ng-click="showDashboard()">
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="col-xs-10 text-left big-button-text" style="font-size: 30px;" ng-cloak>
+                        <div class="col-xs-12 text-left big-button-text" style="font-size: 30px;" ng-cloak>
                             {{ ng.translate('BACK') }}
-                        </div>
-                        <div class="col-xs-2 text-center big-button-icon">
-                            <i class="fa fa-chevron-left fa-5x fa-fw"></i>
+                            <i class="fa fa-chevron-left fa-2x fa-fw pull-right"></i>
                         </div>
                     </div>
                 </div>
